<?xml version="1.0" encoding="utf-8"?>
<!-- RelativeLayout 相对布局学习-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt3_text"
        android:textAllCaps="false"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt1_text"
        android:textAllCaps="false"
        android:layout_above="@id/button3"
        android:layout_toLeftOf="@id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt2_text"
        android:textAllCaps="false"
        android:layout_above="@id/button3"
        android:layout_toRightOf="@id/button3"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt4_text"
        android:textAllCaps="false"
        android:layout_below="@id/button3"
        android:layout_toLeftOf="@id/button3"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt5_text"
        android:textAllCaps="false"
        android:layout_below="@id/button3"
        android:layout_toRightOf="@id/button3"/>

</RelativeLayout>
